2012-02-10  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Protect even more against numerical failures in the computation
	of the log marginal likelihood for GLM models.

2011-10-13  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Add another model prior, called "dep.linear". This prior assumes
	a marginal prior probability of 1/4 for linear inclusion of each
	covariate. 1/2 is for exclusion, and 1/4 for smooth inclusion.
	This model prior is similar to the "dependent" model prior, but
	has a *fixed* prior probability for linear inclusion.

2011-10-04  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* R/getBmaSamples.R: Include zeroes for models where the covariate
	is not included. Note that this is necessary for correct
	computation of fit samples based on a model average. However, this
	changes the interpretation of the samples, and therefore curve
	estimates based on these samples: it is no longer conditional on
	inclusion of the covariate, but marginally over all models, also
	those not including the covariate.

2011-08-19  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Add vignette and citation information.

2011-08-04  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Add fast implementation of utility function
	"aggregateModelsTable", which is useful for aggregating models
	which only are different with respect to their (smooth) degrees of
	freedom for included covariates.

2011-07-27  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Start finalising the "postOptimize" functionality, now also for
	GAMs.

2011-07-22  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* R/glmModelData.R: use more robust computation for null model log
	marginal likelihood, and really use the offsets for constructing
	the fixed GLM weight matrix.

	* R/getRhos.R: more stable computation of eigenvalues,
	and wider range for possible rhos.

	* src/glmGetSamples.cpp: catch errors in MCMC and produce R error